Fix sp character spacing in share.png

--- a/src/app.css
+++ b/src/app.css
@@ -12,7 +12,7 @@
   --unknown-tile-border: #cacaca;
   --accent-color: #696969;
   --text-color: #1b1b1b;
-  --link-color: #5656f5;
+  --link-color: #2364dd;
   --page-background: #ffffff;
   /* Modal */
   --overlay-background: #ffffffbb;
